<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_frame">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/original">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="200dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/aclonica"
                android:gravity="center_horizontal|center_vertical"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:text="@string/signin"
                android:textColor="@color/colorPrimary"
                android:textSize="50sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edittext_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/txtTitle"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="11dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/border_edittext"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHighlight="#dce775"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edittext_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/edittext_username"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_edittext"
                android:drawableLeft="@drawable/baseline_lock_black_24dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/password_signin"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHighlight="#dce775"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/forgot_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edittext_password"
                android:layout_marginLeft="60dp"
                android:text="@string/forgot_pass"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot_pass"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@+id/forgot_pass"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/signin"
                android:textCursorDrawable="@color/colorPrimary"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnSignIn"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/signup"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>